# forge-c64

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.sh  build_docs.sh  emit_asm.sh  enter_builder.sh  mos-c64-none.json  run.sh  run_emulator.sh  toolkit.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
assets/: map.ctm  map_long_item.ctm
src/: entity.rs  lib.rs  main.c  main.rs  map.rs  scratch.rs  screen.rs  spawner.rs  text.rs  text_writer.rs  tile.rs  tileset.rs  utils.rs
tools/CharPad/: What's New.txt
tools/CharPad/Examples - Rips/Armalyte - 5x5/: Note.txt
tools/CharPad/Examples - Rips/Uridium - 1x1/: Note.txt
tools/CharPad/Examples - Rips/Uridum Plus - 1x1/: Note.txt
tools/CharPad/Help/: Character Images - High-resolution.htm  Character Images - Multi-colour.htm  Compression Decompression.htm  Contents.htm  Does Anyone Still Use a Commodore 64.htm  File Exporting.htm  File Format - CTM (V1).htm  File Format - CTM (V2).htm  File Format - CTM (V3).htm  File Format - CTM (V4).htm  File Format - CTM (V5).htm  File Importing.htm  Form - Character Image Editor.htm  Form - Character Set.htm  Form - Map Editor.htm  Form - Project Palette.htm  Form - Snapshot Ripper.htm  Form - Tile Editor.htm  Form - Tile Set.htm  Keyboard Shortcuts.htm  Program Features.htm  VIC-II Character Set Selection.htm  VIC-II Colour Palette.htm  VIC-II Register Map.htm  VIC-II Sub-routine Library.htm  VIC-II Video Bank Selection.htm  VIC-II Video Matrix Selection.htm  What Are Character-Mode Graphics.htm  What Is CharPad.htm  style.css
