[package]
name = "forge-c64"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2021"

[profile.dev]
debug = 2
opt-level = "s"
lto = true
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
mos-alloc = "0.2"
mos-hardware = { git = "https://github.com/mlund/mos-hardware", branch = "main" }
volatile-register = "0.2"
