[package]
name = "forge-c64"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2021"

[profile.dev]
debug = 2
opt-level = "z"
lto = true
codegen-units = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
mos-hardware = { git = "https://github.com/mlund/mos-hardware", branch = "main" }
vcell = "0.1"
