[package]
name = "forge-c64"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2021"

[profile.dev]
lto = true
opt-level = 2
debug = 2
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
debug = 0

[dependencies]
mos-alloc = "0.2"
mos-hardware = { git = "https://github.com/mlund/mos-hardware", branch = "main", default-features = false, features = ["c64", "bindgen"] }
static_assertions = "1"
vcell = "0.1"
